finished question generation framework

--- a/test_freq.ipynb
+++ b/test_freq.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,11 +55,12 @@
     "with open(ability_json_file,'r') as f:\n",
     "    ability_tree = json.load(f)\n",
     "\n",
-    "index = 0   \n",
-    "\n",
+    "# traverse the ability tree and assign index to each ability\n",
+    "index = 0\n",
     "def traverse_ability_tree(node):\n",
+    "    global index\n",
     "    ability_index_dict[node[\"name\"]] = index\n",
-    "    index += 1\n",
+    "    index+=1\n",
     "    if \"children\" in node:\n",
     "        for child in node[\"children\"]:\n",
     "            traverse_ability_tree(child)\n",
@@ -69,10 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "# init ability data\n",
     "if os.path.exists(\"statistics/ability_pair_ref.pickle\"):\n",
     "    with open(\"statistics/ability_pair_ref.pickle\",'rb') as f:\n",
@@ -102,7 +105,7 @@
     "    ability_pair_ref = np.zeros((len(ability_index_dict),len(ability_index_dict)),dtype=np.float32)\n",
     "    for ability,index in ability_index_dict.items():\n",
     "        for ability_2,index_2 in ability_index_dict.items():\n",
-    "            ability_pair_ref[index][index_2] = ability*ability_2\n",
+    "            ability_pair_ref[index][index_2] = ability_freq[ability] + ability_freq[ability_2]\n",
     "    # normalize\n",
     "    ability_pair_freq = ability_pair_ref/np.sum(ability_pair_ref)\n",
     "    with open(\"statistics/ability_pair_ref.pickle\",'wb') as f:\n",
@@ -111,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
