--- a/test_freq.ipynb
+++ b/test_freq.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,9 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.04717058 0.01534916 0.00727347 ... 0.         0.         0.        ]\n",
+      " [0.01534916 0.00499457 0.00236676 ... 0.         0.         0.        ]\n",
+      " [0.00727347 0.00236676 0.00112153 ... 0.         0.         0.        ]\n",
+      " ...\n",
+      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.         0.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -100,21 +114,24 @@
     "            ability_freq[node[\"name\"]] = ability_freq.get(node[\"name\"],0)\n",
     "    \n",
     "    add_freq_to_parent(ability_tree)\n",
+    "    # normalize the ability freq\n",
+    "    total = sum(ability_freq.values())\n",
+    "    for ability in ability_freq:\n",
+    "        ability_freq[ability] /= total\n",
     "\n",
     "    # then calculate the ability pair frequency\n",
     "    ability_pair_ref = np.zeros((len(ability_index_dict),len(ability_index_dict)),dtype=np.float32)\n",
     "    for ability,index in ability_index_dict.items():\n",
     "        for ability_2,index_2 in ability_index_dict.items():\n",
-    "            ability_pair_ref[index][index_2] = ability_freq[ability] + ability_freq[ability_2]\n",
-    "    # normalize\n",
-    "    ability_pair_freq = ability_pair_ref/np.sum(ability_pair_ref)\n",
+    "            ability_pair_ref[index][index_2] = ability_freq[ability] * ability_freq[ability_2]\n",
+    "    print(ability_pair_ref)\n",
     "    with open(\"statistics/ability_pair_ref.pickle\",'wb') as f:\n",
     "        pickle.dump(ability_pair_ref,f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
