ability pair calculation better

--- a/test_freq.ipynb
+++ b/test_freq.ipynb
@@ -70,20 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.04717058 0.01534916 0.00727347 ... 0.         0.         0.        ]\n",
-      " [0.01534916 0.00499457 0.00236676 ... 0.         0.         0.        ]\n",
-      " [0.00727347 0.00236676 0.00112153 ... 0.         0.         0.        ]\n",
+      "[[57.812428  18.81198    8.914388  ...  0.         0.         0.       ]\n",
+      " [18.81198    6.1213584  2.9007134 ...  0.         0.         0.       ]\n",
+      " [ 8.914388   2.9007134  1.3745542 ...  0.         0.         0.       ]\n",
       " ...\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]]\n"
+      " [ 0.         0.         0.        ...  0.         0.         0.       ]\n",
+      " [ 0.         0.         0.        ...  0.         0.         0.       ]\n",
+      " [ 0.         0.         0.        ...  0.         0.         0.       ]]\n"
      ]
     }
    ],
@@ -115,7 +115,7 @@
     "    \n",
     "    add_freq_to_parent(ability_tree)\n",
     "    # normalize the ability freq\n",
-    "    total = sum(ability_freq.values())\n",
+    "    total = len(df)\n",
     "    for ability in ability_freq:\n",
     "        ability_freq[ability] /= total\n",
     "\n",
