--- a/test_freq.ipynb
+++ b/test_freq.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +12,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "600\n"
+     ]
+    }
+   ],
    "source": [
     "#read in tagged data\n",
-    "instance_dataset_path = \"src/instances_InceptionSub_with_tag.csv\"\n",
+    "instance_dataset_path = \"src/instances_Inception_with_tag_600.csv\"\n",
     "df = pd.read_csv(instance_dataset_path)\n",
-    "instance_cnt = len(df)"
+    "instance_cnt = len(df)\n",
+    "print(instance_cnt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,29 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[5.6781551e+01 1.2711152e+01 3.5773900e+00 ... 1.3700643e+00\n",
-      "  2.2834405e-01 1.9789817e+00]\n",
-      " [1.2711152e+01 2.8455260e+00 8.0083662e-01 ... 3.0670339e-01\n",
-      "  5.1117234e-02 4.4301602e-01]\n",
-      " [3.5773900e+00 8.0083662e-01 2.2538516e-01 ... 8.6317725e-02\n",
-      "  1.4386287e-02 1.2468115e-01]\n",
-      " ...\n",
-      " [1.3700643e+00 3.0670339e-01 8.6317725e-02 ... 3.3057850e-02\n",
-      "  5.5096420e-03 4.7750231e-02]\n",
-      " [2.2834405e-01 5.1117234e-02 1.4386287e-02 ... 5.5096420e-03\n",
-      "  9.1827364e-04 7.9583712e-03]\n",
-      " [1.9789817e+00 4.4301602e-01 1.2468115e-01 ... 4.7750231e-02\n",
-      "  7.9583712e-03 6.8972550e-02]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -130,14 +119,13 @@
     "    for ability,index in ability_index_dict.items():\n",
     "        for ability_2,index_2 in ability_index_dict.items():\n",
     "            ability_pair_ref[index][index_2] = ability_freq[ability] * ability_freq[ability_2]\n",
-    "    print(ability_pair_ref)\n",
     "    with open(\"statistics/ability_pair_ref.pickle\",'wb') as f:\n",
     "        pickle.dump(ability_pair_ref,f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
